--- a/src/main.css
+++ b/src/main.css
@@ -1,10 +1,29 @@
+@font-face {
+  font-family: "Geist";
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: block;
+  src: url(/geist.woff2) format("woff2");
+  unicode-range: u+00??,u+0131,u+0152-0153,u+02bb-02bc,u+02c6,u+02da,u+02dc,u+0304,u+0308,u+0329,u+2000-206f,u+20ac,u+2122,u+2191,u+2193,u+2212,u+2215,u+feff,u+fffd
+}
+
+@font-face {
+  font-family: "Geist Mono";
+  font-style: normal;
+  font-weight: 100 300   900;
+  font-display: block;
+  src: url(/geist-mono.woff2) format("woff2");
+  unicode-range: u+00??,u+0131,u+0152-0153,u+02bb-02bc,u+02c6,u+02da,u+02dc,u+0304,u+0308,u+0329,u+2000-206f,u+20ac,u+2122,u+2191,u+2193,u+2212,u+2215,u+feff,u+fffd
+}
+
+/* sizes and stuff */
+
 h1, h2, h3, .geist {
   font-family: "Geist", "Geist Fallback", sans-serif;
-  font-display: block;
 }
 
 h1 {
-  font-size: 64px;
+  font-size: 40px;
   font-weight: 900;
 }
 
@@ -18,15 +37,13 @@ h3 {
   font-weight: 700;
 }
 
-p, label, a, li {
+p, label, a, li, .geist-mono {
   font-family: "Geist Mono", "Geist Mono Fallback", monospace;
-  font-size: 14px;
-  font-display: block;
+  font-weight: 300;
 }
 
-.geist-mono {
-  font-family: "Geist Mono", "Geist Mono Fallback", monospace;
-  font-display: block;
+p, label, a, li {
+  font-size: 14px;
 }
 
 /*  */
