--- a/src/main.css
+++ b/src/main.css
@@ -2,7 +2,7 @@
   font-family: "Geist";
   font-style: normal;
   font-weight: 100 900;
-  font-display: block;
+  font-display: swap;
   src: url(/geist.woff2) format("woff2");
   unicode-range: u+00??,u+0131,u+0152-0153,u+02bb-02bc,u+02c6,u+02da,u+02dc,u+0304,u+0308,u+0329,u+2000-206f,u+20ac,u+2122,u+2191,u+2193,u+2212,u+2215,u+feff,u+fffd
 }
@@ -11,7 +11,7 @@
   font-family: "Geist Mono";
   font-style: normal;
   font-weight: 100 300   900;
-  font-display: block;
+  font-display: swap;
   src: url(/geist-mono.woff2) format("woff2");
   unicode-range: u+00??,u+0131,u+0152-0153,u+02bb-02bc,u+02c6,u+02da,u+02dc,u+0304,u+0308,u+0329,u+2000-206f,u+20ac,u+2122,u+2191,u+2193,u+2212,u+2215,u+feff,u+fffd
 }
